--- a/test-output/htmlreport/automation-report.html
+++ b/test-output/htmlreport/automation-report.html
@@ -35,7 +35,7 @@
 <a href="#"><span class="badge badge-primary"></span></a>
 </li>
 <li class="m-r-10">
-<a href="#"><span class="badge badge-primary">Oct 28, 2022 04:18:36 pm</span></a>
+<a href="#"><span class="badge badge-primary">Oct 30, 2022 08:02:45 pm</span></a>
 </li>
 </ul>
 </div>
@@ -45,11 +45,6 @@
 <li class="nav-item dropdown" onclick="toggleView('test-view')">
 <a id="nav-test" class="dropdown-toggle" href="#">
 <span class="ico"><i class="fa fa-list"></i></span>
-</a>
-</li>
-<li class="nav-item dropdown" onclick="toggleView('exception-view')">
-<a id="nav-exception" class="dropdown-toggle" href="#">
-<span class="ico"><i class="fa fa-bug"></i></span>
 </a>
 </li>
 <li class="nav-item dropdown" onclick="toggleView('dashboard-view')">
@@ -72,7 +67,6 @@
 <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-exclamation-circle"></i></a>
 <ul id="status-toggle" class="dropdown-menu dropdown-md p-v-0">
 <a class="dropdown-item" status="pass" href="#"><span>Pass</span><span class="status success"></span></a>
-<a class="dropdown-item" status="fail" href="#"><span>Fail</span><span class="status danger"></span></a>
 <div class="dropdown-divider"></div>
 <a status="clear" class="dropdown-item" href="#"><span>Clear</span><span class="pull-right"><i class="fa fa-close"></i></span></a>
 </ul>
@@ -80,25 +74,25 @@
 </ul>
 </div>    <div class="test-list-wrapper scrollable">
       <ul class="test-list-item">
-        <li class="test-item"  status="fail" test-id="1"
+        <li class="test-item"  status="pass" test-id="1"
           author=""
           tag=""
           device="">
           <div class="test-detail">
             <p class="name">HotelApp login</p>
             <p class="text-sm">
-              <span>4:18:40 pm</span> / <span>00:01:09:930</span>
-              <span class="badge fail-bg log float-right">Fail</span>
+              <span>8:02:47 pm</span> / <span>00:00:50:307</span>
+              <span class="badge pass-bg log float-right">Pass</span>
             </p>
           </div>
           <div class="test-contents d-none">
 <div class="detail-head">
 <div class="p-v-10">
 <div class="info">
-<h5 class="test-status text-fail">HotelApp login</h5>
-<span class='badge badge-success'>10.28.2022 4:18:40 pm</span>
-<span class='badge badge-danger'>10.28.2022 4:19:49 pm</span>
-<span class='badge badge-default'>00:01:09:930</span>
+<h5 class="test-status text-pass">HotelApp login</h5>
+<span class='badge badge-success'>10.30.2022 8:02:47 pm</span>
+<span class='badge badge-danger'>10.30.2022 8:03:38 pm</span>
+<span class='badge badge-default'>00:00:50:307</span>
 &middot; <span class='uri-anchor badge badge-default'>#test-id=1</span>
 <span class='badge badge-default pointer float-right ml-1 et'><i class="fa fa-chevron-down"></i></span>
 <span class='badge badge-default pointer float-right ct'><i class="fa fa-chevron-up"></i></span>
@@ -110,10 +104,10 @@
   <div class="card">
     <div class="card-header" role="tab">
       <div class="card-title">
-        <div class="node" id="2"><span class="badge log fail-bg mr-2">Fail</span>Login Successful</div>
+        <div class="node" id="2"><span class="badge log pass-bg mr-2">Pass</span>Login Successful</div>
       </div>
     </div>
-        <div class="">
+        <div class="collapse">
           <div class="card-body">
               <div class="step pass-bg" title="com.stepDefinition.Test_Steps.user_is_on_hotel_app_homepage()">
                 <span>Given User is on HotelApp homepage</span>
@@ -132,16 +126,9 @@
       <div>
       </div>
               </div>
-              <div class="step fail-bg" title="com.stepDefinition.Test_Steps.login_is_successful()">
+              <div class="step pass-bg" title="com.stepDefinition.Test_Steps.login_is_successful()">
                 <span>Then Login is Successful</span>
       <div>
-        <textarea disabled class="code-block">org.junit.ComparisonFailure: expected:<Hello [vasuvespag]!> but was:<Hello [aryan1207]!>
-	at org.junit.Assert.assertEquals(Assert.java:117)
-	at org.junit.Assert.assertEquals(Assert.java:146)
-	at com.stepDefinition.Test_Steps.login_is_successful(Test_Steps.java:60)
-	at ✽.Login is Successful(file:///C:/Users/Administrator/JAVA%20Workspace/HotelAppCucumberDemo/Features/DataTableDemo.feature:12)
-</textarea>
-      
       </div>
               </div>
           </div>
@@ -150,10 +137,10 @@
   <div class="card">
     <div class="card-header" role="tab">
       <div class="card-title">
-        <div class="node" id="40"><span class="badge log fail-bg mr-2">Fail</span>Login Successful</div>
+        <div class="node" id="40"><span class="badge log pass-bg mr-2">Pass</span>Login Successful</div>
       </div>
     </div>
-        <div class="scenario_outline ">
+        <div class="scenario_outline collapse">
             <div class="card-body l1">
               <div class="card-header">
                 <div class="card-title outline-child">
@@ -191,10 +178,10 @@
             <div class="card-body l1">
               <div class="card-header">
                 <div class="card-title outline-child">
-                  <div class="node" id="47"><span class="badge log fail-bg mr-2">Fail</span>Login Successful</div>
+                  <div class="node" id="47"><span class="badge log pass-bg mr-2">Pass</span>Login Successful</div>
                 </div>
               </div>
-              <div class="card-body mt-3 ">
+              <div class="card-body mt-3 collapse">
                   <div class="step pass-bg">
                     <span>Given User is on HotelApp homepage</span>
       <div>
@@ -215,16 +202,9 @@
       <div>
       </div>
                   </div>
-                  <div class="step fail-bg">
+                  <div class="step pass-bg">
                     <span>Then Login is Successful</span>
       <div>
-        <textarea disabled class="code-block">org.junit.ComparisonFailure: expected:<Hello [vasuvespag]!> but was:<Hello [aryan1207]!>
-	at org.junit.Assert.assertEquals(Assert.java:117)
-	at org.junit.Assert.assertEquals(Assert.java:146)
-	at com.stepDefinition.Test_Steps.login_is_successful(Test_Steps.java:60)
-	at ✽.Login is Successful(file:///C:/Users/Administrator/JAVA%20Workspace/HotelAppCucumberDemo/Features/OutlineDemo.feature:9)
-</textarea>
-      
       </div>
                   </div>
               </div>
@@ -241,7 +221,7 @@
           <div class="test-detail">
             <p class="name">HotelApp Login</p>
             <p class="text-sm">
-              <span>4:18:56 pm</span> / <span>00:00:09:633</span>
+              <span>8:02:59 pm</span> / <span>00:00:06:249</span>
               <span class="badge pass-bg log float-right">Pass</span>
             </p>
           </div>
@@ -250,9 +230,9 @@
 <div class="p-v-10">
 <div class="info">
 <h5 class="test-status text-pass">HotelApp Login</h5>
-<span class='badge badge-success'>10.28.2022 4:18:56 pm</span>
-<span class='badge badge-danger'>10.28.2022 4:19:06 pm</span>
-<span class='badge badge-default'>00:00:09:633</span>
+<span class='badge badge-success'>10.30.2022 8:02:59 pm</span>
+<span class='badge badge-danger'>10.30.2022 8:03:05 pm</span>
+<span class='badge badge-default'>00:00:06:249</span>
 &middot; <span class='uri-anchor badge badge-default'>#test-id=7</span>
 <span class='badge badge-default pointer float-right ml-1 et'><i class="fa fa-chevron-down"></i></span>
 <span class='badge badge-default pointer float-right ct'><i class="fa fa-chevron-up"></i></span>
@@ -307,7 +287,7 @@
           <div class="test-detail">
             <p class="name">HotelApp login Parm</p>
             <p class="text-sm">
-              <span>4:19:06 pm</span> / <span>00:00:09:823</span>
+              <span>8:03:05 pm</span> / <span>00:00:05:821</span>
               <span class="badge pass-bg log float-right">Pass</span>
             </p>
           </div>
@@ -316,9 +296,9 @@
 <div class="p-v-10">
 <div class="info">
 <h5 class="test-status text-pass">HotelApp login Parm</h5>
-<span class='badge badge-success'>10.28.2022 4:19:06 pm</span>
-<span class='badge badge-danger'>10.28.2022 4:19:16 pm</span>
-<span class='badge badge-default'>00:00:09:823</span>
+<span class='badge badge-success'>10.30.2022 8:03:05 pm</span>
+<span class='badge badge-danger'>10.30.2022 8:03:11 pm</span>
+<span class='badge badge-default'>00:00:05:821</span>
 &middot; <span class='uri-anchor badge badge-default'>#test-id=14</span>
 <span class='badge badge-default pointer float-right ml-1 et'><i class="fa fa-chevron-down"></i></span>
 <span class='badge badge-default pointer float-right ct'><i class="fa fa-chevron-up"></i></span>
@@ -373,7 +353,7 @@
           <div class="test-detail">
             <p class="name">HotelApp Search Hotel</p>
             <p class="text-sm">
-              <span>4:19:16 pm</span> / <span>00:00:19:327</span>
+              <span>8:03:11 pm</span> / <span>00:00:15:630</span>
               <span class="badge pass-bg log float-right">Pass</span>
             </p>
           </div>
@@ -382,9 +362,9 @@
 <div class="p-v-10">
 <div class="info">
 <h5 class="test-status text-pass">HotelApp Search Hotel</h5>
-<span class='badge badge-success'>10.28.2022 4:19:16 pm</span>
-<span class='badge badge-danger'>10.28.2022 4:19:35 pm</span>
-<span class='badge badge-default'>00:00:19:327</span>
+<span class='badge badge-success'>10.30.2022 8:03:11 pm</span>
+<span class='badge badge-danger'>10.30.2022 8:03:27 pm</span>
+<span class='badge badge-default'>00:00:15:630</span>
 &middot; <span class='uri-anchor badge badge-default'>#test-id=21</span>
 <span class='badge badge-default pointer float-right ml-1 et'><i class="fa fa-chevron-down"></i></span>
 <span class='badge badge-default pointer float-right ct'><i class="fa fa-chevron-up"></i></span>
@@ -507,92 +487,30 @@
 </div>
 <div class="test-content-detail"><div class="detail-body"></div></div>
 </div></div>
-<div class="test-wrapper row view exception-view attributes-view">
-<div class="test-list">
-<div class="test-list-tools">
-<ul class="tools pull-left"><li><a href=""><span class="font-size-14">Exception</span></a></li></ul>
-<ul class="tools text-right"><li><a href="#"><span class="badge badge-primary">1</span></a></li></ul>
-</div>
-<div class="test-list-wrapper scrollable">
-<ul class="test-list-item">
-<li class="test-item">
-<div class="test-detail">
-<span class="meta">
-<span class='badge log badge-danger'>2</span>
-</span>
-<p class="name">org.junit.ComparisonFailure</p>
-<p class="duration text-sm">2 tests</p>
-</div>
-<div class="test-contents d-none">
-<div class="info">
-<h4>org.junit.ComparisonFailure</h4>
-<span status="fail" class='badge log badge-danger'>2 failed</span>
-</div>
-<table class='table table-sm mt-4'>
-<thead>
-<tr>
-<th class="status-col">Status</th>
-<th class="timestamp-col">Timestamp</th>
-<th>TestName</th>
-</tr>
-</thead>
-<tbody>
-<tr class="tag-test-status" status="fail">
-<td><span class="badge log fail-bg">Fail</span></td>
-<td>16:18:56 pm</td>
-<td>
-<a href="#" class="linked" test-id='1' id='6'>Then Login is Successful</a>
-<div class="">
-<span class="badge badge-default">HotelApp login.Login Successful.Then Login is Successful</span>
-</div>
-</td>
-</tr>
-<tr class="tag-test-status" status="fail">
-<td><span class="badge log fail-bg">Fail</span></td>
-<td>16:19:49 pm</td>
-<td>
-<a href="#" class="linked" test-id='1' id='52'>Then Login is Successful</a>
-<div class="">
-<span class="badge badge-default">HotelApp login.Login Successful.Then Login is Successful</span>
-</div>
-</td>
-</tr>
-</tbody>
-</table>
-</div>
-</li>
-</ul>
-</div>
-</div>
-<div class="test-content scrollable">
-<div class="test-content-detail">
-<div class="detail-body"></div>
-</div>
-</div>
-</div><div class="container-fluid p-4 view dashboard-view">
+<div class="container-fluid p-4 view dashboard-view">
 <div class="row">
 <div class="col-md-3">
 <div class="card"><div class="card-body">
 <p class="m-b-0">Started</p>
-<h3>Oct 28, 2022 04:18:36 pm</h3>
+<h3>Oct 30, 2022 08:02:45 pm</h3>
 </div></div>
 </div>
 <div class="col-md-3">
 <div class="card"><div class="card-body">
 <p class="m-b-0">Ended</p>
-<h3>Oct 28, 2022 04:19:50 pm</h3>
+<h3>Oct 30, 2022 08:03:38 pm</h3>
 </div></div>
 </div>
 <div class="col-md-3">
 <div class="card"><div class="card-body">
 <p class="m-b-0 text-pass">Features Passed</p>
-<h3>3</h3>
+<h3>4</h3>
 </div></div>
 </div>
 <div class="col-md-3">
 <div class="card"><div class="card-body">
 <p class="m-b-0 text-fail">Features Failed</p>
-<h3>1</h3>
+<h3>0</h3>
 </div></div>
 </div>
 </div>
@@ -608,12 +526,12 @@
 </div>
 </div>
 <div class="card-footer">
-<div><small data-tooltip='75%'>
-<b>3</b> features passed
+<div><small data-tooltip='100%'>
+<b>4</b> features passed
 </small>
 </div>
 <div>
-<small data-tooltip='25%'><b>1</b> features failed,
+<small data-tooltip='0%'><b>0</b> features failed,
 <b>0</b> skipped, <b data-tooltip='0%'>0</b> others
 </small>
 </div>
@@ -631,9 +549,9 @@
 </div>
 </div>
 <div class="card-footer">
-<div><small data-tooltip='71%'><b>5</b> scenarios passed</small></div>
+<div><small data-tooltip='100%'><b>7</b> scenarios passed</small></div>
 <div>
-<small data-tooltip='28%'><b>2</b> scenarios failed,
+<small data-tooltip='0%'><b>0</b> scenarios failed,
 <b>0</b> skipped, <b data-tooltip='%'>0</b> others
 </small>
 </div>
@@ -651,9 +569,9 @@
 </div>
 </div>
 <div class="card-footer">
-<div><small data-tooltip='95%'><b>38</b> steps passed</small></div>
+<div><small data-tooltip='100%'><b>40</b> steps passed</small></div>
 <div>
-<small data-tooltip='5%'><b>2</b> steps failed,
+<small data-tooltip='0%'><b>0</b> steps failed,
 <b>0</b> skipped, <b data-tooltip='%'>0</b> others
 </small>
 </div>
@@ -670,7 +588,7 @@
 </div></div>
 <script>
 var timeline = {
-"HotelApp login":69.93,"HotelApp Login":9.633,"HotelApp login Parm":9.823,"HotelApp Search Hotel":19.327
+"HotelApp login":50.307,"HotelApp Login":6.249,"HotelApp login Parm":5.821,"HotelApp Search Hotel":15.63
 };
 </script>
 <div class="row">
@@ -679,19 +597,19 @@ var timeline = {
 <script>
 var statusGroup = {
 parentCount: 5,
-passParent: 3,
-failParent: 1,
+passParent: 4,
+failParent: 0,
 warningParent: 0,
 skipParent: 0,
 childCount: 5,
-passChild: 5,
-failChild: 2,
+passChild: 7,
+failChild: 0,
 warningChild: 0,
 skipChild: 0,
 infoChild: 0,
 grandChildCount: 5,
-passGrandChild: 38,
-failGrandChild: 2,
+passGrandChild: 40,
+failGrandChild: 0,
 warningGrandChild: 0,
 skipGrandChild: 0,
 infoGrandChild: 0,
